[package]
name = "tabula"
version = "0.1.0"
edition = "2021"
authors = ["Teia Leusten <teia.leusten@proton.me>"]
description = "A simple command line tool for cryptography and cryptanalysis"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4"
